# gen-ai-nlp-lab-2

./: .gitignore  README.md  pyproject.toml  sample.env
notebooks/: dataset_to_jsonl.ipynb  preprocessing.ipynb  processing.ipynb
