[tool.poetry]
name = "gen-ai-nlp-lab-2"
version = "0.1.0"
description = ""
authors = ["Roman Kovalchuk <ro.kovalch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.3"
fsspec = "^2024.12.0"
huggingface-hub = "^0.27.1"
deepl = "^1.20.0"
python-dotenv = "^1.0.1"
tiktoken = "^0.8.0"
openai = "^1.59.4"
faiss-cpu = "^1.9.0.post1"
matplotlib = "^3.10.0"
streamlit = "^1.41.1"
langchain = "^0.3.14"
singleton-decorator = "^1.0.0"
dynaconf = "^3.2.6"
decoratory = "^0.9.9.3"
mlflow = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
